@@ -13,12 +13,25 @@ TA4 - rtems_rate_monotonic_ident id = 0x2c010004
 TA4 - (0x2c010004) period 2
 TA5 - rtems_rate_monotonic_create id = 0x2c010005
 TA5 - rtems_rate_monotonic_ident id = 0x2c010005
-TA5 - (0x28010005) period 100
+TA5 - (0x2c010005) period 100
+TA6 - rtems_rate_monotonic_create id = 0x2c010006
+TA6 - rtems_rate_monotonic_ident id = 0x2c010006
+TA6 - (0x2c010006) period 0
 TA5 - PERIODS CHECK OK (1)
 TA5 - PERIODS CHECK OK (2)
 TA5 - PERIODS CHECK OK (3)
 TA5 - PERIODS CHECK OK (4)
 TA5 - PERIODS CHECK OK (5)
+TA6 - Actual: 10  Expected: 10 - OK
+TA6 - Actual: 20  Expected: 20 - OK
+TA6 - Actual: 30  Expected: 30 - OK
+TA6 - Actual: 40  Expected: 40 - OK
+TA6 - Actual: 50  Expected: 50 - OK
+TA6 - Actual: 60  Expected: 60 - OK
+TA6 - Actual: 70  Expected: 70 - OK
+TA6 - Actual: 80  Expected: 80 - OK
+TA6 - Actual: 90  Expected: 90 - OK
+TA6 - Actual: 100  Expected: 100 - OK
 TA5 - PERIODS CHECK OK (6)
 TA5 - PERIODS CHECK OK (7)
 TA5 - PERIODS CHECK OK (8)
